hphp/test/slow/type_annotation/type_annotation_typeaccess8.php.expectf
Fatal error: when resolving type constant C::U, C::T does not resolve to a class or an interface and cannot contain type constant T1 in %s on line 11
